kustomize/base/servicea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
spec:
  selector:
    matchLabels:
      app: servicea
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
      - name: servicea
        image: bcetinturk/go-dummy-servicea:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
