kustomize/base/servicea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicea
spec:
  selector:
    app: servicea
  ports:
  - port: 80
    targetPort: 8080
