kustomize/base/servicea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicea
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: servicea
spec:
  rules:
  - host: servicea.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: servicea
            port: 
              number: 80
